--- a/Notebooks/settings.json
+++ b/Notebooks/settings.json
@@ -1,26 +1,64 @@
-{  "study_site": "Caddo National Grassland",
-    "boundary": {
-        "url": "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.NationalGrassland.zip",
-        "local_path": "assets/study-site-boundaires/grasslands.shp",
-        "crs": "EPSG:4326"
+{
+  "study_site": "Caddo National Grassland",
+  "boundary": {
+    "url": "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.NationalGrassland.zip",
+    "local_path": "assets/study-site-boundaires/grasslands.shp",
+    "crs": "EPSG:4326"
+  },
+  "data_sources": {
+    "soil": {
+      "property": "ph",
+      "stat": "mean",
+      "depth": "60_100",
+      "local_path": "data/rasters/soil"
     },
-    "data_sources": {
-        "soil": {
-            "property": "ph",
-            "stat": "mean",
-            "depth": "60_100",
-            
-            "local_path": "data/rasters/soil"
-        },
-        "elevation": {
-            "type": "custom_api",
-            "api_endpoint": "custom_api_url",
-            "parameters": {},
-            "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM"
-        },
-        "climate": {
-            "type": "climate_url",
-            "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/climate"
-        }
+    "elevation": {
+      "type": "custom_api",
+      "api_endpoint": "custom_api_url",
+      "parameters": {},
+      "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM"
+    },
+    "climate": {
+      "type": "climate_url",
+      "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/climate"
     }
+  },
+  "fuzzy_logic": {
+    "variables": {
+      "soil_pH": {
+        "range": [3, 10, 0.1],
+        "sets": {
+          "acidic": {"type": "triangular", "params": [3, 3, 6.9]},
+          "neutral": {"type": "triangular", "params": [5, 7, 9]},
+          "alkaline": {"type": "triangular", "params": [7.1, 10, 10]}
+        }
+      },
+      "elevation": {
+        "range": [0, 3000, 1],
+        "sets": {
+          "low": {"type": "triangular", "params": [0, 0, 1500]},
+          "medium": {"type": "triangular", "params": [1000, 2000, 3000]},
+          "high": {"type": "triangular", "params": [2500, 3000, 3000]}
+        }
+      },
+      "climate": {
+        "range": [0, 500, 1],
+        "sets": {
+          "dry": {"type": "triangular", "params": [0, 0, 250]},
+          "moderate": {"type": "triangular", "params": [200, 250, 300]},
+          "wet": {"type": "triangular", "params": [300, 500, 500]}
+        }
+      }
+    },
+    "rules": [
+      {
+        "if": ["soil_pH.neutral", "AND", "elevation.medium", "AND", "climate.moderate"],
+        "then": "habitat_suitability.high"
+      },
+      {
+        "if": ["soil_pH.acidic", "OR", "elevation.low"],
+        "then": "habitat_suitability.low"
+      }
+    ]
+  }
 }
