--- a/Notebooks/settings.json
+++ b/Notebooks/settings.json
@@ -1,89 +1,90 @@
 [
-    {
+  {
       "study_site": "Caddo National Grassland",
       "boundary": {
-        "url": "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.NationalGrassland.zip",
-        "local_path": "assets/study-site-boundaires/grasslands.shp",
-        "crs": "EPSG:4326"
+          "url": "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.NationalGrassland.zip",
+          "local_path": "assets/study-site-boundaires/grasslands.shp",
+          "crs": "EPSG:4326"
       },
       "data_sources": {
-        "soil": {
-          "property": "ph",
-          "stat": "mean",
-          "depth": "60_100",
-          "local_path": "data/rasters/soil"
-        },
-        "elevation": {
-          "type": "custom_api",
-          "api_endpoint": "custom_api_url",
-          "parameters": {},
-          "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM"
-        },
-        "climate": {
-          "type": "climate_url",
-          "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/climate"
-        }
-      },
-      "fuzzy_logic": {
-        "variables": {
-          "soil_pH": {
-            "range": [3, 10, 0.1],
-            "sets": {
-              "acidic": {"type": "triangular", "params": [3, 3, 4.9]},
-              "slightly acidic": {"type": "triangular", "params": [5, 6, 7]},
-              "neutral": {"type": "triangular", "params": [6.5, 7, 7.5]},
-              "slightly alkaline": {"type": "triangular", "params": [7, 8, 9]},
-              "alkaline": {"type": "triangular", "params": [9.1, 10, 10]}
-            }
+          "soil": {
+              "property": "ph",
+              "stat": "mean",
+              "depth": "60_100",
+              "local_path": "data/rasters/soil"
           },
           "elevation": {
-            "range": [0, 3000, 1],
-            "sets": {
-              "low": {"type": "triangular", "params": [0, 0, 1500]},
-              "medium": {"type": "triangular", "params": [1000, 2000, 3000]},
-              "high": {"type": "triangular", "params": [2500, 6000, 6000]}
-            }
+              "type": "custom_api",
+              "api_endpoint": "custom_api_url",
+              "parameters": {},
+              "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM",
+              "slope_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM/slop.tiff"
           },
           "climate": {
-            "range": [0, 500, 1],
-            "sets": {
-              "dry": {"type": "triangular", "params": [0, 0, 250]},
-              "moderate": {"type": "triangular", "params": [200, 250, 300]},
-              "wet": {"type": "triangular", "params": [300, 500, 500]}
-            }
-          },
-          "slope": {
-            "range": [0, 90, 0.5],
-            "sets": {
-              "low slope":{"type": "triangular", "params":[0, 0, 30]},
-              "medium slope":{"type": "triangular", "params":[30.5, 45, 60]},
-              "high slope":{"type": "triangular", "params":[60.5, 90, 90]}
-            }
+              "type": "climate_url",
+              "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/climate"
           }
-        },
-        "rules": {
-          
-              "if": ["soil_pH.neutral", "OR", "soil_pH.slightly_acidic", "AND", "elevation.medium", "AND", "climate.moderate", "AND", "slope.low_slope"],
-              "then": "habitat_suitability.high"
-         }}},
-    
-          {
-              "if": ["soil_pH.neutral", "AND", "elevation.low", "AND", "slope.medium_slope"],
-              "then": "habitat_suitability.medium"
+ 
+      },
+      "fuzzy_logic": {
+          "variables": {
+              "soil_pH": {
+                  "range": [3, 10, 0.1],
+                  "sets": {
+                      "acidic": {"type": "triangular", "params": [3, 3, 4.9]},
+                      "slightly acidic": {"type": "triangular", "params": [5, 6, 7]},
+                      "neutral": {"type": "triangular", "params": [6.5, 7, 7.5]},
+                      "slightly alkaline": {"type": "triangular", "params": [7, 8, 9]},
+                      "alkaline": {"type": "triangular", "params": [9.1, 10, 10]}
+                  }
+              },
+              "elevation": {
+                  "range": [0, 3000, 1],
+                  "sets": {
+                      "low": {"type": "triangular", "params": [0, 0, 1500]},
+                      "medium": {"type": "triangular", "params": [1000, 2000, 3000]},
+                      "high": {"type": "triangular", "params": [2500, 6000, 6000]}
+                  }
+              },
+              "slope": {
+                "range": [0, 90, 0.5],
+                "sets": {
+                    "low slope":{"type": "triangular", "params":[0, 0, 30]},
+                    "medium slope":{"type": "triangular", "params":[30.5, 45, 60]},
+                    "high slope":{"type": "triangular", "params":[60.5, 90, 90]}
+                }
+            },
+              "climate": {
+                  "range": [0, 500, 1],
+                  "sets": {
+                      "dry": {"type": "triangular", "params": [0, 0, 250]},
+                      "moderate": {"type": "triangular", "params": [200, 250, 300]},
+                      "wet": {"type": "triangular", "params": [300, 500, 500]}
+                  }
+              }
           },
-          {
-              "if": ["climate.moderate", "AND", "elevation.medium", "AND", "slope.medium_slope"],
-              "then": "habitat_suitability.medium"
-          },
-          {
-              "if": ["soil_pH.alkaline", "OR", "elevation.high", "OR", "slope.high_slope"],
-              "then": "habitat_suitability.low"
-          },
-          {
-              "if": ["climate.dry", "OR", "climate.wet"],
-              "then": "habitat_suitability.low"
-          }
-        
-    ]
-    
-    
+          "rules": [
+              {
+                  "if": ["soil_pH.neutral", "OR", "soil_pH.slightly_acidic", "AND", "elevation.medium", "AND", "climate.moderate", "AND", "slope.low_slope"],
+                  "then": "habitat_suitability.high"
+              },
+              {
+                  "if": ["soil_pH.neutral", "AND", "elevation.low", "AND", "slope.medium_slope"],
+                  "then": "habitat_suitability.medium"
+              },
+              {
+                  "if": ["climate.moderate", "AND", "elevation.medium", "AND", "slope.medium_slope"],
+                  "then": "habitat_suitability.medium"
+              },
+              {
+                  "if": ["soil_pH.alkaline", "OR", "elevation.high", "OR", "slope.high_slope"],
+                  "then": "habitat_suitability.low"
+              },
+              {
+                  "if": ["climate.dry", "OR", "climate.wet"],
+                  "then": "habitat_suitability.low"
+              }
+          ]
+      }
+  }
+]
