--- a/Notebooks/settings.json
+++ b/Notebooks/settings.json
@@ -1,10 +1,10 @@
 [
   {
-      "study_site": "Caddo National Grassland",
+      "study_site": "Kiowa National Grassland",
       "boundary": {
           "url": "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.NationalGrassland.zip",
           "local_path": "assets/study-site-boundaires/grasslands.shp",
-          "crs": "EPSG:4326"
+          "crs": "4269"
       },
       "data_sources": {
           "soil": {
@@ -18,7 +18,7 @@
               "api_endpoint": "custom_api_url",
               "parameters": {},
               "local_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM",
-              "slope_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM/slop.tiff"
+              "slope_path": "/workspaces/golden-feather-grass-habitats/assets/bin/rasters/DEM/slope.tiff"
           },
           "climate": {
               "type": "climate_url",
@@ -32,9 +32,9 @@
                   "range": [3, 10, 0.1],
                   "sets": {
                       "acidic": {"type": "triangular", "params": [3, 3, 4.9]},
-                      "slightly acidic": {"type": "triangular", "params": [5, 6, 7]},
+                      "slightly_acidic": {"type": "triangular", "params": [5, 6, 7]},
                       "neutral": {"type": "triangular", "params": [6.5, 7, 7.5]},
-                      "slightly alkaline": {"type": "triangular", "params": [7, 8, 9]},
+                      "slightly_alkaline": {"type": "triangular", "params": [7, 8, 9]},
                       "alkaline": {"type": "triangular", "params": [9.1, 10, 10]}
                   }
               },
@@ -49,9 +49,9 @@
               "slope": {
                 "range": [0, 90, 0.5],
                 "sets": {
-                    "low slope":{"type": "triangular", "params":[0, 0, 30]},
-                    "medium slope":{"type": "triangular", "params":[30.5, 45, 60]},
-                    "high slope":{"type": "triangular", "params":[60.5, 90, 90]}
+                    "low_slope":{"type": "triangular", "params":[0, 0, 30]},
+                    "medium_slope":{"type": "triangular", "params":[30.5, 45, 60]},
+                    "high_slope":{"type": "triangular", "params":[60.5, 90, 90]}
                 }
             },
               "climate": {
